--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="icon" href="/favicon.ico">
-    <title>Shounen Game Test</title>
+    <title>Test Shounen Game</title>
     <link href="/css/app.5f73ad02.css" rel="preload" as="style">
     <link href="/css/chunk-vendors.52eaf30c.css" rel="preload" as="style">
     <link href="/js/app.05e813c6.js" rel="preload" as="script">
